--- a/style.css
+++ b/style.css
@@ -345,3 +345,82 @@ article.icon{
 
 
 
+/* projects */
+
+#projects{
+    position: relative;
+}
+
+.color-container{
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+}
+
+.project-img{
+    border-radius: 32px;
+    width: 90%;
+    height: 90%;
+}
+
+.project-title{
+    margin: 16px;
+    color: black;
+
+}
+
+.project-btn{
+    color: black;
+    border-color: rgb(163, 163, 163);
+}
+
+/* contact section */
+
+#contact{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container{
+    display: flex;
+    justify-content: center;
+    border-radius: 32px;
+    border: rgb(53, 53, 53) 1.6px solid;
+    border-color: rgb(163, 163, 163);
+    background-color: rgb(250, 250, 250);
+    margin: 32px auto;
+    padding: 8px;
+    gap: 10px;
+}
+
+.contact-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    margin: 1px;
+}
+
+.contact-info.container p{
+    font-size: larger;
+}
+
+.contact-icon{
+    cursor: default;
+}
+
+.email-icon{
+    height: 40px;
+}
+
+/* FOOTER */
+
+footer{
+    height: 26vh;
+    margin: 0 16px;
+}
+
+footer p{
+    text-align: center;
+}
